--- a/templates/galaxy.yml.j2
+++ b/templates/galaxy.yml.j2
@@ -1,6 +1,6 @@
 namespace: community
 name: distribution
-version: {{version}}
+version: '{{version}}'
 readme: README.md
 authors:
   - Ansible (https://github.com/ansible)
